--- a/Labs/Week10_formativeAssessment.Rmd
+++ b/Labs/Week10_formativeAssessment.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 9: Regression II"
+title: "Week 10: Formative Assessment"
 output:
   learnr::tutorial:
     progressive: true
@@ -12,8 +12,6 @@ runtime: shiny_prerendered
 library(learnr)
 library(tidyverse)
 library(kableExtra)
-# library(plotly)
-# library(shiny)
 
 baseColor <- '#4CA384'
 accent1 <- '#9AD079'
@@ -34,21 +32,9 @@ During today's lab, you'll be working through the formative assessment. This ass
 quiz(caption = '',
      question('At what level of measurement should the independent variables be when using a One-Way ANOVA? Please select any that apply.',
               answer('Continuous'),
-              answer('Nominal', correct = T),
-              answer('Ordinal', correct = T),
-              answer('Binary'),
-              message = 'A One-Way ANOVA requires categorical independent variables; these can be either nominal or ordinal. While it could work with binary variables, a t-test is a better option.'),
-      question("You have designed an intervention for people who report high levels of loneliness, by which they engage in a certain number of volunteering activities per week. You take a sample and measure their loneliness levels on a continuous scale before the intervention. You then perform the intervention and measure their loneliness levels again afterwards. You also record their living situation (levels: alone/with roommates/with family or partner). You would like to determine whether the intervention had an effect on loneliness, and whether this effect was moderated by living situation. Which of the following best describes the test you would use?",
-               answer('1x3 Between-Subjects Factorial ANOVA'),
-               answer('1x3 Within-Subjects Factorial ANOVA'),
-               answer('1x3 Mixed Factorial ANOVA'),
-               answer('2x1 Between-Subjects Factorial ANOVA'),
-               answer('2x1 Within-Subjects Factorial ANOVA'),
-               answer('2x1 Mixed Factorial ANOVA'),
-               answer('2x3 Between-Subjects Factorial ANOVA'),
-               answer('2x3 Within-Subjects Factorial ANOVA'),
-               answer('2x3 Mixed Factorial ANOVA', correct = T),
-               message = "As you have one between-subjects variable (living situation) and one within-subjects variable (time), you would use a Mixed ANOVA. Your first variable, time, has 2 levels (pre- or post-intervention), and your second variable, living situation, has 3 levels (alone; with roommates; with family or partner), so your analysis would be a 2x3 Mixed Factorial ANOVA."),
+              answer('Binary Categorical'),
+              answer('Categorical with 3 or more levels', correct = T),
+              message = 'A One-Way ANOVA requires categorical independent variables.'),
      question("A researcher wants to know whether her sample’s scores on a personality test are significantly different than 50. Which of the following statistical tests should she use?",
               answer('One-Sample t-test', correct = T),
               answer('independent-samples t-test'),
@@ -61,9 +47,8 @@ quiz(caption = '',
               message = "The researcher is comparing her sample's mean to a single, pre-established value. A one-sample t-test would be the best method for testing this."),
      question('At what level of measurement does the independent variable need to be for a t-test? Please select any that apply.',
               answer('Continuous'),
-              answer('Nominal', correct = T),
-              answer('Ordinal', correct = T),
-              answer('Binary', correct = T),
+              answer('Binary Categorical', correct = T),
+              answer('Categorical with 3 or more levels'),
               message = 'A t-test requires the independent variable to be categorical. It could be nominal or ordinal, but there must only be two levels (binary).',
               random_answer_order = T),
      question('Researchers conduct a study into the effect of sleep deprivation on speed of processing in a driving simulator. They ask participants to complete a 15 minute driving simulation task. At the end of the task, they ask the participants a series of questions about the events in the simulation. Participants receive a score out of 25 representing the number of questions they get correct. The participants then spend the night in a room controlled by the research team where they are limited to three hours sleep. The next day, they complete the same task and get a second score. The team want to consider the difference in these scores. Which test is most appropriate?',
@@ -76,6 +61,17 @@ quiz(caption = '',
               answer('Simple Linear Regression'),
               answer('Multiple Linear Regression'),
               message = 'Here, you have a continuous dependent variable (score). As the same sample provides responses at both timepoints, this is a repeated-measures design with two groups (pre and post sleep-deprivation). A paired-samples t-test would be the best '),
+     question("You have designed an intervention for people who report high levels of loneliness, by which they engage in a certain number of volunteering activities per week. You take a sample and measure their loneliness levels on a continuous scale before the intervention. You then perform the intervention and measure their loneliness levels again afterwards. You also record their living situation (levels: alone/with roommates/with family or partner). You would like to determine whether the intervention had an effect on loneliness, and whether this effect was moderated by living situation. Which of the following best describes the test you would use?",
+               answer('1x3 Between-Subjects Factorial ANOVA'),
+               answer('1x3 Within-Subjects Factorial ANOVA'),
+               answer('1x3 Mixed Factorial ANOVA'),
+               answer('2x1 Between-Subjects Factorial ANOVA'),
+               answer('2x1 Within-Subjects Factorial ANOVA'),
+               answer('2x1 Mixed Factorial ANOVA'),
+               answer('2x3 Between-Subjects Factorial ANOVA'),
+               answer('2x3 Within-Subjects Factorial ANOVA'),
+               answer('2x3 Mixed Factorial ANOVA', correct = T),
+               message = "As you have one between-subjects variable (living situation) and one within-subjects variable (time), you would use a Mixed ANOVA. Your first variable, time, has 2 levels (pre- or post-intervention), and your second variable, living situation, has 3 levels (alone; with roommates; with family or partner), so your analysis would be a 2x3 Mixed Factorial ANOVA."),
      question('You are testing the effects of parental involvement and bullying on emotional regulation in children. Parental involvement is measured by the number of parental interactions per week, and bullying as the number of times the child is bullied per week. Which of the following analyses would best test for these effects?',
               answer('One-Sample t-test'),
               answer('independent-samples t-test'),
@@ -101,7 +97,7 @@ quiz(caption = '',
               answer('Factorial ANOVA'),
               answer('Multiple Linear Regression'),
               message = "Here, you have a continuous dependent variable, stress, that you want to compare across three categories of a single independent variable, hospital size. The best option of the given tests would be a One-Way ANOVA. Because you're comparing three separate samples (nurses who work in small hospitals, nurses who work in medium-sized hospitals, and nurses who work in large hospitals), you would use a Between-Subjects ANOVA"),
-     question('You have 2 continuous independent variables, sleep quality and stress level, and you want to test whether they significant predict depression severity (measured on a continuous scale). You also want to know whether the effect of sleep quality on depression severity changes at different levels of stress. Which of the following tests is the most appropriate for testing this?',
+     question('You have 2 continuous independent variables, sleep quality and stress level, and you want to test whether they significantly predict depression severity (measured on a continuous scale). You also want to know whether the effect of sleep quality on depression severity changes at different levels of stress. Which of the following tests is the most appropriate for testing this?',
      answer('One-Sample t-test'),
      answer('independent-samples t-test'),
      answer('paired-samples t-test'),
@@ -120,7 +116,7 @@ quiz(caption = '',
               answer('Factorial ANOVA', correct = T),
               answer('2 Simple Linear Regressions'),
               message = "There are two categorical independent variables and a single continuous dependent variable. If you were to use two separate analyses, you would (1) increase the chances of making a Type I error and (2) be unable to capture the effect of bullying on emotional regulation while controlling for parental interactions and vice versa. The best option here is a Factorial ANOVA. Specifically, this would be a 4x4 Between-Subjects ANOVA"),
-     question("A researcher investigates whether family history of substance abuse (Yes or No) is related to frequency of use in substance abusers. Which test should they use?",
+     question("A researcher investigates whether family history of substance abuse (Yes or No) is related to a continuous measure of substance use in substance abusers. Which test should they use?",
               answer('One-Sample t-test'),
               answer('Independent-samples t-test', correct = T),
               answer('Paired-samples t-tests'),
@@ -167,8 +163,8 @@ quiz(caption = '',
 
 You have the following residuals by predicted values plot:
 
-```{r, echo=FALSE, fig.align='center'}
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_resPredPlot')
+```{r, echo=FALSE, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_resPredPlot.png')
 ```
 
 ```{r checkingAssumptions2, echo = FALSE}
@@ -190,7 +186,7 @@ quiz(caption = '',
               answer('A model with high model variance and high residual variance.'),
               answer('A model with low model variance and high residual variance.'),
               answer('A model with low model variance and low residual variance.'),
-              message = "Model variance refers to the amount of variance in the outcome variable explained by the predictors in the model. Residual variance refers to the amount of variance that is cannot be explained by the predictors included in the model.",
+              message = "Model variance refers to the amount of variance in the outcome variable explained by the predictors in the model. Residual variance refers to the amount of variance that is cannot be explained by the predictors included in the model, otherwise known as the model's error.",
               random_answer_order = T),
      question("I check the effect size associated with my t-test and note that Cohen's D is equal to .18. Which of the following best describes the relationship between my variables?",
               answer('The two variables are not related.'),
@@ -212,7 +208,7 @@ quiz(caption = '',
 
 Imagine that you are investigating the effect of class time (9AM, 10AM, and 1PM) on test scores. You run a One-Way ANOVA and get these results:
 
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', out.width='75%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_classANOVA.png')
 ```
 
@@ -226,7 +222,7 @@ quiz(caption = '',
               message = "The F-statistic is less than 1 and the p-value is .879, which is greater than our alpha threshold of .05. This means that there is an 88% chance we would see results as extreme as this if the null hypothesis were true. Therefore, there is not enough evidence to claim that there is a significant effect of class time on test score."),
      question_numeric("What is value of the F-statistic associated with this test? Please round your answer to two decimal places.",
               answer(0.22, correct = T),
-              message = "The F-statistic associated with this test is 0.22."),
+              message = "The F-statistic associated with this test is 0.22. Please be sure to include the leading 0, as the F-statistic can exceed 1."),
      question_numeric("You would report this result in the following format: F(___, ___) = 0.22, p = .879. Note the two blank spaces. What number goes in the first blank?",
               answer(3, correct = T),
               message = 'The first blank reflects the model degrees of freedom. SPSS calls this the "Between-Groups df". In this example, it is 3.'),
@@ -239,7 +235,7 @@ quiz(caption = '',
 
 Imagine that you run a Pearson correlation between age and test score and get these results:
 
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', out.width='75%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_correlation.png')
 ```
 
@@ -256,11 +252,10 @@ quiz(caption = '',
 
 You have conducted a study in public speakers to determine how their method of practicing a speech (repeating the speech aloud vs recording and watching themselves) affects their recognition of words found within the speech at a later timepoint. You test their recognition a few days after practicing begins and again after they have given the speech. You run a 2x2 mixed-effects ANOVA and get the following output. 
 
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', out.width='75%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_ANOVAdesc.png')
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_mixedANOVA1.png')
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_mixedANOVA2.png')
-knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_ANOVAdesc.png')
 ```
 
 ```{r interp4, echo = FALSE}
@@ -278,14 +273,14 @@ quiz(caption = '',
 
 You regress scores from a Body Satisfaction Scale on continuous measures of Self-Esteem, Media Exposure, and Perfectionism. All variables are raw measures (no mean centering has been applied). You get the following results:
 
-```{r, echo=FALSE, fig.align='center'}
+```{r, echo=FALSE, fig.align='center', out.width='75%'}
 knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week10_regression.png')
 ```
 
 
 ```{r interp5, echo = FALSE}
 quiz(caption = '',
-     question("Which of the following is the proper interpretation of the intercept?",
+     question("Which of the following is the proper interpretation of the intercept? Please note that SPSS calls the intercept (Constant)",
               answer('When someone scores 0 on the self-esteem, media exposure, and perfectionism scales, their body satisfaction rating is expected to be 58.92', correct = T),
               answer('Someone with average levels of self-esteem, media exposure, and perfectionism will have a body satisfaction rating of 58.92'),
               answer('The model explains 58.92% of the variance when all predictors equal 0.'),
@@ -301,10 +296,33 @@ quiz(caption = '',
               answer('False'),
               message = 'The model p-value of .003 is less than the alpha threshold of .05, so this model significantly predicts body satisfaction scores.'),
      question('Which of the following interpretations are correct? Please select all that apply.',
-              answer('For every 1-unit increase in perfectionism, body satisfaction scores decrease by 1.24 points.', correct = T),
+              answer('For every 1-unit increase in perfectionism, body satisfaction scores decrease by 1.24 points when holding self-esteem and media exposure constant.', correct = T),  
               answer('Media exposure has a positive relationship with body satisfaction'),
-              answer('For every 1-unit increase in self-esteem, body satisfaction scores increase by 2.18 points.', correct = T),
+              answer('For every 1-unit increase in self-esteem, body satisfaction scores increase by 2.18 points when holding perfectionism and media exposure constant.', correct = T),
               message = 'The interpretations for perfectionism and self-esteem are correct, but the interpretation for media exposure is not. Because the association between media exposure and body satisfaction is not significant, we cannot assume there is any relationship between the two variables.',
               random_answer_order = T))
 ```
 
+
+## Power Analysis
+
+Use [Webpower](https://webpower.psychstat.org/wiki/models/index) to answer the following questions. Please note that you may need to use the following formulas to convert between $\eta^2$ / $R^2$ and $f$:
+
+$$\eta^2/R^2 = \frac{f^2}{1+f^2}$$
+
+
+$$f^2 = \frac{R^2}{1-R^2}$$
+
+```{r power, echo = FALSE}
+quiz(caption = '',
+     question_numeric("What TOTAL sample size do you need to have 80% power to detect an effect of d = .3 at alpha = .05 for a two-tailed independent samples t-test with equal group sizes? Please round your answer to a whole number.",
+              answer(352, correct = T),
+              message = "You need 176 participants in EACH group to detect this effect, for a total of 352 participants."),
+     question_numeric('You are running a 2x4 between-subjects ANOVA. You are primarily interested in the interaction effect. What effect size (in eta-squared) do you have 80% power to detect with alpha = .05 and a sample size of 210? Please round your answer to two decimal places.',
+              answer(.05, correct = T),
+              message = 'The total number of groups is equal to 2x4 = 8. The numerator degrees of freedom for the interaction is (j-1)x(k-1), where j is the number of levels in variable 1 and k is the number of levels in variable 2. Here, the numerator degrees of freedom are (2-1)x(4-1) = 3. The value of f is equal to .23. This can be converted to eta-squared: .23^2/(1+.23^2) = .05.'),
+     question_numeric('What is the total sample size necessary to detect an R2 of .15 with 80% power and alpha = .05 using a linear regression model with 5 predictors?',
+              answer(79, correct = T),
+              answer(77, correct = T),
+              message = "Webpower's linear regression calculator converts R2 into f2 for you. Otherwise, you can find f2 using the following equation: .15/(1-.15) = .18. Depending on how you round this value, you will need between 77-79 participants to detect the desired effect."))
+```
